resources/k8s/jnj-armor-docs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jnj-armor-docs

spec:
  to:
    kind: Service
    name: jnj-armor-docs

  port:
    targetPort: http
